# moonstar-physics

./: .gitignore  README.md  pyproject.toml  scienceopen_author.json
docs/: index.html
docs/reviews/: geometric-unity.html
moonstar_physics/: _parsing.py  _particle_data.py  conservation_transform.py  dimension_transform.py  qm_calc_transform.py  reference_lookup_transform.py
moonstar_physics/data/: particles.json
moonstar_physics/paper_review/: __init__.py  chunking.py  html_render.py  markdown_render.py  paper_spec.py  review_model.py  scienceopen.py
papers/: geometric-unity.yaml
pipelines/: models.json  paper_chunk_summary.yaml  paper_reduce_summary.yaml  physics_hypothesis.yaml
reviews/geometric-unity/: review.md  review_data.json  scienceopen_metadata.json
reviews/geometric-unity/runs/: 042d44f1-3fe6-4339-b0c7-c15dafddf72f.json  344a54aa-9910-4d77-b74e-0ff07bba659c.json  3beb4cf2-27ee-4baf-b7c8-668f1c9f2644.json  4328c6a2-be23-4358-8355-2b4e2d03d9f1.json  (+9 more)
scripts/: _pipeline_client.py  build_site.py  publish_review.py  test_hypothesis.py
templates/: index.html.j2  review.html.j2
tests/: test_build_site.py  test_chunking.py  test_conservation_transform.py  test_dimension_transform.py  test_entrypoints.py  test_html_render.py  test_hypothesis_script.py  test_markdown_render.py  test_paper_pipelines.py  test_paper_spec.py  test_parsing.py  test_particle_data.py  test_physics_hypothesis_pipeline.py  test_pipeline_client.py  test_publish_review.py  test_qm_calc_transform.py  test_reference_lookup_transform.py  test_review_model.py  test_scienceopen.py
(+14 files in other folders)
