[project]
name = "moonstar-physics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "moonstar-core",
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.entry-points."moonstar.transforms"]
ConservationLawCheckTransform = "moonstar_physics.conservation_transform:ConservationLawCheckTransform"
QMCalculationTransform        = "moonstar_physics.qm_calc_transform:QMCalculationTransform"
ReferenceDataLookupTransform  = "moonstar_physics.reference_lookup_transform:ReferenceDataLookupTransform"
DimensionConsistencyTransform = "moonstar_physics.dimension_transform:DimensionConsistencyTransform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
